--- a/world-news-hub/package.json
+++ b/world-news-hub/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "i18next": "^23.16.4",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.0",
     "react-router-dom": "^6.27.0",
     "toastr": "^2.1.4"
   },
